--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">BiciKM</string>
+    <string name="title_activity_menu_main">MenuMainActivity</string>
+    <string name="title_home">Iniciar Ruta</string>
+    <string name="title_dashboard">Consultar Ruta</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
