--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">BiciKM</string>
     <string name="title_activity_menu_main">MenuMainActivity</string>
     <string name="title_home">Iniciar Ruta</string>
-    <string name="title_dashboard">Consultar Ruta</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_historial">Historial</string>
+    <string name="title_recompensas">Recompensas</string>
+    <string name="title_notificaciones">Notificaciones</string>
+    <string name="title_activity_notifications">NotificationsActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
