--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">BiciKM</string>
-    <string name="title_activity_menu_main">MenuMainActivity</string>
+    <string name="title_activity_menu_main">BiciKM</string>
     <string name="title_home">Iniciar Ruta</string>
     <string name="title_historial">Historial</string>
     <string name="title_recompensas">Recompensas</string>
@@ -9,4 +9,12 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="Planets">
+        <item>Ruta Characato:23/28/19 13:05:04-15:05:60</item>
+        <item>Ruta La Joya: 23/28/19 13:05:04-15:05:60 </item>
+        <item>Ruta Selva Alegre: 23/28/19 13:05:04-15:05:60</item>
+        <item>Ruta Playa: 23/28/19 13:05:04-15:05:60</item>
+        <item>Ruta Paucarpata: 23/28/19 - 13:05:04-15:05:60</item>
+    </string-array>
 </resources>
