--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,13 @@
     <string name="app_name">BiciKM</string>
     <string name="title_activity_menu_main">BiciKM</string>
     <string name="title_home">Iniciar Ruta</string>
-    <string name="title_historial">Historial</string>
+    <string name="title_estadisticas">Estadisticas</string>
     <string name="title_recompensas">Recompensas</string>
-    <string name="title_notificaciones">Notificaciones</string>
-    <string name="title_activity_notifications">NotificationsActivity</string>
+    <string name="title_servicios">Servicios</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string-array name="Planets">
-        <item>Ruta Characato:23/28/19 13:05:04-15:05:60</item>
-        <item>Ruta La Joya: 23/28/19 13:05:04-15:05:60 </item>
-        <item>Ruta Selva Alegre: 23/28/19 13:05:04-15:05:60</item>
-        <item>Ruta Playa: 23/28/19 13:05:04-15:05:60</item>
-        <item>Ruta Paucarpata: 23/28/19 - 13:05:04-15:05:60</item>
-    </string-array>
+    <string name="title_activity_recompensas">BiciKM Recompensas</string>
+    <string name="title_activity_estadisticas">BiciKM Estadisticas</string>
+    <string name="title_activity_servicios">BiciKM Servicios</string>
 </resources>
