--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="title_notificaciones">Notificaciones</string>
     <string name="title_activity_notifications">NotificationsActivity</string>
 
+    <string name="default_notification_channel_id">Notification</string>
+    <string name="fcm_message">Notification</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
